# kafka-rocksdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  docker-compose.yml  kafka_rocksdb.toml  produce.sh
.github/workflows/: build.yml  release.yml  test.yml
examples/: dump_db.rs  producer.rs
src/: consumer.rs  database.rs  error.rs  kafka_rocksdb.rs  kafka_stream_ext.rs  lib.rs  logging.rs  main.rs  metrics.rs  prometheus_exporter.rs  settings.rs  signals.rs  stream_signal_ext.rs
