[package]
name = "kafka-rocksdb"
version = "0.2.1"
authors = ["Michael Krolikowski <mkroli@yahoo.de>"]
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = 's'
lto = true
panic = "abort"
codegen-units = 1

[features]
schema_registry = ["apache-avro", "schema_registry_converter"]

[[example]]
name = "dump_db"
required-features = ["schema_registry"]

[[example]]
name = "producer"
required-features = ["schema_registry"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fern = "0.6"
clap = { version = "4", features = ["derive"] }
config = "0.13"
rdkafka = { version = "0.34", features = ["tokio", "cmake-build"] } # TODO: ssl
pin-project = "1"
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }
hex-slice = "0.1"
prometheus = "0.13"
lazy_static = "1"
prometheus-static-metric = "0.5"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
apache-avro = { version = "0.16", optional = true }
schema_registry_converter = { version = "4", default-features = false, features = ["avro", "blocking"], optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
